# celeste-dll-hack

./: CMakeLists.txt
src/: HackWindow.hpp  InfiniteDashesHack.cpp  InfiniteDashesHack.hpp  Logger.cpp  Logger.hpp  MemoryHelper.cpp  MemoryHelper.hpp  ProjectConfig.hpp  SignatureScanningHack.hpp  WindowsManager.cpp  WindowsManager.hpp  dllmain.cpp
